
<resources>
    <string name="app_name">Hisab</string>
    <string name="action_settings">Settings</string>

    <!-- Shared Prefrences -->
    <string name="user_shared_preef">user_detail</string>
    <string name="shared_pref_name">User_name</string>
    <string name="default_username">User</string>
    <string name="shared_pref_number">User_number</string>
    <string name="default_usernumber">1234567890</string>

    <!-- User Detail -->
    <string name="dp_temp_name">dp_crop.jpg</string>
    <string name="dp_temp_uncrop_name">dp.jpg</string>
    <string name="user_number_info">Number won\'t be shared. It will only be used when friend shares account status.</string>

    <string name="category">Category</string>

    <!-- Navigation Drawer -->
    <string name="nav_header_edit">Edit</string>
    <string name="nav_drawer_pending">Pending</string>
    <string name="nav_drawer_settled">Settled</string>
    <string name="nav_drawer_setting">Setting</string>
    <string name="nav_drawer_analysis">E-Analysis</string>
    <string name="nav_drawer_send_reminder">Send Reminder</string>
    <string name="nav_drawer_sync_pending">Sync Pending</string>

    <string name="shared_transition_person_name">sharedPersonName</string>

    <!-- Introduction Screen -->
    <string name="msg1_unsettle">Seems Like You don\'t have transaction yet.</string>
    <string name="msg2_unsettle">Press add button to add one</string>
    <string name="msg1_settle">Your None Transactions are Settled yet.</string>
    <string name="msg2_settle">Press add button to add new transactions</string>
    <string name="msg_unsettle">Everything Settled!</string>
    <string name="msg_settle">Nothing Left!</string>

    <string-array name="category_list">
        <item>Food</item>
        <item>Education</item>
        <item>Party</item>
        <item>Movie</item>
        <item>Misc</item>
    </string-array>

    <!-- Setting Fragment -->
    <string name="title_activity_settings">Settings</string>
    <string name="pending_rem">pendingRem</string>
    <string name="not_sound">notSound</string>
    <string name="not_vibrate">notVibrate</string>

    <!-- GCM Parameter -->
    <string name="SENT_TOKEN_TO_SERVER">token_done</string>
    <string name="gcm_rec_req_bunlde_userid">UserID</string>
    <string name="gcm_rec_req_bunlde_type">type</string>
    <string name="gcm_rec_req_bunlde_accept">RequestAccepted</string>
    <string name="shared_pref_first_time">FirstTime</string>
    <string name="gcm_rec_req_bunlde_username">Name</string>

    <!-- AddSliderFragment -->
    <string name="include_me_while_dividing_amount">Include Me while Dividing Amount</string>
    <string name="add_hint_name">Name</string>
    <string name="add_hint_mobile_number">Mobile Number</string>
    <string name="add_hint_reason">Reason</string>
    <string name="add_hint_amount">Amount</string>
    <string name="add_hint_given">Lend</string>
    <string name="add_hint_taken">Borrow</string>
    <string name="add_hint_add">Add</string>

    <!-- Graph Fragment -->
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="go">Go</string>

    <!-- Setting Fragment -->
    <string name="notification">NOTIFICATION</string>
    <string name="pending_reminder">Pending Reminder</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="about">ABOUT</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="the_end">THE END</string>
    <string name="delete_account">Delete Account</string>
    <string name="terms_and_condition">Terms And Condition</string>

    <!-- User Detail Dialog -->
    <string name="user_hint_name">Name</string>
    <string name="user_hint_mobile_no">Mobile No</string>
    <string name="save">Save</string>

    <!-- Content Description -->
    <string name="amount_to_be_taken_card">Amount To be taken card</string>
    <string name="empty_detail">Empty Detail</string>
    <string name="empty_feed">Empty Feed</string>
    <string name="click_add">Click Add</string>
    <string name="delete_entry">Delete Entry</string>

    <!-- Main Activity -->
    <string name="reminder_dialogue_title">Reminder</string>
    <string name="reminder_dialogue_msg">Select Contact To Send Pending Reminder</string>
    <string name="reminder_dialogue_result">Request Sent. You will get Notified when Response Comes.</string>
    <string name="request_dialogue_title">Sync Request</string>
    <string name="request_dialogue_msg">Select Contact To Ask Pending Transactions</string>
    <string name="request_dialogue_result">Reminder Sent</string>
    <string name="request_dialogue_ask">Ask</string>
    <string name="request_dialogue_cancel">Cancel</string>
    <string name="request_dialogue_send">Send</string>
    <string name="reminder_dialogue_cancel">Cancel</string>
    <string name="permission_denied_msg">Permission Denied! Few Feature might not work!</string>

    <!-- Detail recycler View -->
    <string name="settle_one_msg">Do You want to Settle this Transaction?</string>
    <string name="settle_one_title">Settle?</string>
    <string name="yes">Yes</string>
    <string name="delete_one_msg">Do You want to Delete this Transaction Permanently?</string>
    <string name="delete_one_title">Delete?</string>
    <string name="no">No</string>

    <!-- GCM Listener -->
    <string name="owe_me">: \"You Owe Me Buddy!\"</string>
    <string name="reminded_msg_1">" reminded that you have Rs "</string>
    <string name="reminded_msg_2"> pending.</string>
    <string name="sync_result">"Sync Result from : "</string>
    <string name="sync_result_msg">" has shared their pending transactions."</string>
    <string name="asking">" Asking"</string>
    <string name="asking_msg">" has asked for Syncing Transaction With you."</string>

    <!-- Detail Fragment -->
    <string name="save_tran_msg">Do you Want to Save This Transactions?</string>
    <string name="save_tran_title">Save</string>
    <string name="delete_complete_msg">Do You want to Delete Complete Transaction Permanently?</string>
    <string name="delete_complete_title">Delete?</string>
    <string name="settle_complete">Do You want to settle Complete Transaction?</string>
    <string name="settle_complete_title">Settle?</string>
    <string name="warning">Make Sure Amount Value is Integer</string>

    <!-- Add Slider -->
    <string name="name_no_warning">Please Enter Name and Number</string>
    <string name="reason_warning">Please Enter Reason</string>
    <string name="amount_warning">Please Enter Amount</string>

    <!-- Setting Fragment -->
    <string name="stop_reminder_title">Stop Reminders?</string>
    <string name="stop_reminder_msg">By Stopping Reminders, you won\'t be allowed to send Reminders also!</string>
    <string name="delete_title">Delete Account</string>
    <string name="delete_msg">Do you really want to delete Account. You won\'t be able to retrieve it back</string>
    <string name="nice_choice">Nice Choice!</string>
    <string name="pending">Pending</string>
    <string name="settle">Settle</string>
    <string name="first_drawer_text">Why Don\'t You Introduce Yourself. Click The Edit Button!</string>
    <string name="intro_0_title">Welcome to Hiasb</string>
    <string name="intro_0_msg">All your Money Related Transaction At One Place</string>
    <string name="intr1_0_title">Get Ur Transactions Organized</string>
    <string name="intro_1_msg">Hisab helps you to keep track of all your transactions!</string>
    <string name="intro_2_title">Send Reminders!</string>
    <string name="intro_2_msg">Remind your friends about the money they owe to you</string>
    <string name="intro_3_title">Get Expense Analysis</string>
    <string name="intro_3_msg">Keep track of on which things you spent most of your money.</string>
    <string name="no_data">No Data</string>
    <string name="token">Token</string>
    <string name="Shared_pref_detail_first">Detail_First_Time</string>
    <string name="backup">BACKUP</string>
    <string name="back">Backup</string>
    <string name="restore">Restore</string>


    <!-- FAQ -->
    <string-array name="faq_question">
        <item>What is Hisab?</item>
        <item>What is shown in the First Screen</item>
        <item>What are the options in Navigation Menu</item>
        <item>What is shown in Pending Section</item>
        <item>What is shown in Settled Section</item>
        <item>What is shown in Analysis Section</item>
        <item>What is Send Reminder?</item>
        <item>What is Sync Pending?</item>
        <item>Are My Transactions visible to anyone?</item>
        <item>Does My DP and number visible to anyone?</item>
        <item>Where Can I see My Profile?</item>
        <item>How Do I change my DP?</item>
        <item>How Do I edit my Account detail?</item>
        <item>How to add new Transaction</item>
        <item>What happen when multiple User are added in one Transaction?</item>
        <item>How to delete one particular entry from one transaction?</item>
        <item>How to delete transactions permanently</item>
    </string-array>

    <string-array name="faq_answer">
        <item>
            Hisab is an android app which allow its user to maintain their pending transactions with their
            friends.\n It allow user to send reminder to your friends about pending transaction, in case
            they forgot it[and even if they are ignoring it ;)]
        </item>
        <item>
            The Starting screen show list of all pending transactions. If you have not added any it will be blank.
        </item>
        <item>
            There are many option in navigation menu, like:
            \n Pending: For showing all pending transaction, similarly settled for settled transactions.
            \n E-Analysis stands for Expense Analysis. It shows a graph of how much you spend on what things.
            \n Send Reminder and Sync Pending are explained below.
        </item>
        <item>
            Shows all Pending transaction.
        </item>
        <item>
            Shows all Settled transaction.
        </item>
        <item>
            E-Analysis stands for Expense Analysis. It shows a graph of how much you spend on what things.
            \n You can also see graph for a particular period of time.
        </item>
        <item>
            Send Reminder feature allows you to send reminder of pending transaction to your friend.
        </item>
        <item>
            Sync Pending is for asking your friend to share hi/her transaction details with you.
        </item>
        <item>
            No. Your transactions are only visible to you. But your friend can ask you to share
            it using sync pending feature.
        </item>
        <item>
            No. Neither yoy DP nor your number is visible to anyone.
        </item>
        <item>
            Just by opening navigation menu(three bar symbol) to see your profile.
        </item>
        <item>By clicking on the existing DP</item>
        <item>By clicking edit button</item>
        <item>
            Click on + Symbol on pending screen to add new transactions.
        </item>
        <item>
            The total amount is divided into all the users equally.
        </item>
        <item>
            By Swiping right on one particular transaction in detail page, a delete button becomes visible.
            \n Press that button to delete that transaction.
        </item>
        <item>
            If yu delete transaction from pending section, it will go in settled section.
            \n But if you delete transaction from settled section it will get deleted from your mobile.
        </item>
    </string-array>

</resources>
