<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginLeft="@dimen/standard_10"
        android:layout_marginRight="@dimen/standard_10"
        android:layout_marginTop="@dimen/standard_15"
        android:layout_marginBottom="@dimen/standard_15"
        android:hint="@string/user_hint_name"
        android:ems="10"
        android:textSize="20sp"
        android:background="@drawable/editbox_corner"
        android:id="@+id/user_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_marginLeft="@dimen/standard_10"
        android:layout_marginRight="@dimen/standard_10"
        android:layout_marginTop="@dimen/standard_15"
        android:hint="@string/user_hint_mobile_no"
        android:textSize="20sp"
        android:background="@drawable/editbox_corner"
        android:id="@+id/user_number" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/standard_10"
        android:paddingRight="@dimen/standard_10"
        android:layout_marginTop="@dimen/standard_5"
        android:layout_marginBottom="@dimen/standard_15"
        android:text="@string/user_number_info"/>

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:id="@+id/user_save" />
</LinearLayout>