<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context="gj.udacity.capstone.hisab.fragment.GraphFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/startCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:contentDescription="@string/start_date" />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_date"/>

        <ImageView
            android:id="@+id/endCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:contentDescription="@string/end_date" />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/end_date"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/startDate"
            android:focusable="false"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/endDate"
            android:focusable="false"
            android:layout_weight="1" />
        <Button
            android:id="@+id/dateQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"/>

    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/expensePie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
